# cybulde-model

./: Makefile  docker-compose-template.yaml  docker-compose.yaml  pyproject.toml
.envs/: .infrastructure  .mlflow-common  .mlflow-dev  .mlflow-prod  .postgres
cybulde/: __init__.py  generate_final_config.py  launch_job_on_gcp.py  run_tasks.py  tests.py
cybulde/config_schemas/: base_schemas.py  config_schema.py  data_module_schemas.py  transformations_schemas.py
cybulde/config_schemas/evaluation/: evaluation_lightning_module_schemas.py  evaluation_task_schemas.py  model_selector_schemas.py
cybulde/config_schemas/experiment/bert/: local_bert.py  test_local_bert.py
cybulde/config_schemas/infrastructure/: infrastructure_schema.py  instance_group_creator_schemas.py  instance_template_creator_schemas.py
cybulde/config_schemas/models/: adapter_schemas.py  backbone_schemas.py  head_schemas.py  model_schemas.py  transformation_schemas.py
cybulde/config_schemas/prediction/: prediction_lightning_module_schemas.py  prediction_task_schemas.py
cybulde/config_schemas/trainer/: callbacks_schemas.py  logger_schemas.py  trainer_schemas.py
cybulde/config_schemas/training/: lightning_module_schemas.py  loss_schemas.py  optimizer_schemas.py  scheduler_schemas.py  training_lightning_module_schemas.py  training_task_schemas.py
cybulde/configs/automatically_generated/: config.yaml  full_config_header.yaml
cybulde/data_modules/: data_modules.py  datasets.py  transformations.py
cybulde/error_analysis/: classification_error_visualization.py
cybulde/evaluation/: model_selector.py
cybulde/evaluation/lightning_modules/: bases.py  binary_text_evaluation.py
cybulde/evaluation/tasks/: bases.py  common_evaluation_task.py
cybulde/infrastructure/: instance_group_creator.py  instance_template_creator.py
cybulde/models/: adapters.py  backbones.py  heads.py  models.py  transformations.py
cybulde/models/common/: exporter.py  io_utils.py  utils.py
cybulde/prediction/lightning_modules/: bases.py  binary_text_classification.py
cybulde/prediction/tasks/: bases.py  classification_error_visualizer_prediction_task.py  common_prediction_task.py
cybulde/training/: loss_functions.py  schedulers.py
cybulde/training/lightning_modules/: bases.py  binary_text_classification.py
cybulde/training/tasks/: bases.py  common_training_task.py  tar_model_exporting_training_task.py
cybulde/utils/: config_utils.py  gcp_utils.py  io_utils.py  mixins.py  mlflow_utils.py  pl_utils.py  torch_utils.py  utils.py
cybulde/web_app/: server.py
docker/: Dockerfile  base.Dockerfile
docker/scripts/: start-prediction-service.sh  start-tracking-server.sh  startup-script.sh
notebooks/: eda.ipynb
scripts/: deploy-etcd-server.sh  task_runner_startup_script.sh
scripts/utils/: extract-torch-version
scripts/vm_startup/: task_runner_startup_script.sh
